--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
     <!-- Load game source files -->
     <script src="src/Boot.js"></script>
     <script src="src/Preload.js"></script>
+    <script src="src/LevelDesign.js" type="text/javascript"></script>
     <script src="src/MainMenu.js"></script>
     <script src="src/Game.js"></script>
 
