--- a/www/index.html
+++ b/www/index.html
@@ -33,11 +33,13 @@
     <link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
     <!-- Load Phaser engine -->
     <script src="lib/phaser.min.js"></script>
+    <script src="lib/phaser-kinetic-scrolling-plugin.min.js"></script>
     <!-- Load game source files -->
     <script src="src/Boot.js"></script>
     <script src="src/Preload.js"></script>
     <script src="src/LevelDesign.js" type="text/javascript"></script>
     <script src="src/MainMenu.js"></script>
+    <script src="src/About.js"></script>
     <script src="src/Game.js"></script>
 
     <!-- Load game entrance -->
