Added a Settings State
This can clear up the main menu a bit and give us a dedicated area for
settings

--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,7 @@
     <script src="src/MainMenu.js"></script>
     <script src="src/About.js"></script>
     <script src="src/Game.js"></script>
+    <script src="src/Settings.js"></script>
 
     <!-- Load game entrance -->
     <script src="src/app.js"></script>
