--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="Phaser App">
     <meta name="viewport" content="initial-scale=1 maximum-scale=1 user-scalable=0 minimal-ui" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <!-- non-retina iPhone pre iOS 7 -->
     <link rel="apple-touch-icon" sizes="57x57" href="icons/app_icon_57x57.png">
